alterada a tela do ensino médio

--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -22,15 +22,46 @@
     <section>
         <div class="centralizar_div">
             <div class="jogo_cinza">
-                <p id="titulo_SF"> JOGO DAS ESCOLHAS</p>
-                <p class="subtitulo_jogos"> Controle sua vida no trânsito!</p>
-                <div class="botao_ensino_medio">
-                    <button class="botao_entrar">JOGAR</button>
+                <div>
+                    <p id="titulo_SF">JOGOS SOBRE TRÂNSITO</p>
+                    <p class="subtitulo_jogos">Controle suas ações no trânsito</p>
                 </div>
-                <div id="imagens_jogo_ensino_medio">
-                    <img id="icone_certo" src="../imagens/certo.png">
-                    <img id="homem_escolhendo" src="../imagens/homem-hesitante-e-sem-nocao-cruza-as-maos-sobre-o-peito-indica-com-o-dedo-indicador-em-diferentes-lados-ou-direcoes.png">
-                    <img id="icone_errado" src="../imagens/errado.png">
+                <div class="jogo_azul">
+                    <div class="deixar_lado">
+                        <div>
+                            <img class="imagem_jogo" src="../imagens/escolha.png">
+                        </div>
+                        <div>
+                            <p>JOGO DAS ESCOLHAS</p>
+                            <button class="botao_entrar">JOGAR</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="jogo_azul">
+                    <div class="deixar_lado">
+                        <div>
+                            <p>QUIZ DO TRÂNSITO </p>
+                            <button class="botao_entrar">JOGAR</button>
+                        </div>
+                        <div>
+                            <img class="imagem_quiz" src="../imagens/quiz.png">
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+        <div class="centralizar_div">
+            <div class="jogo_cinza">
+                <p>INFORMAÇÕES</p>  
+                <div>
+                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img class="imagens_eptran" src="../imagens/carroEPTRAN.png">
+                    <button class="" img src="../imagens/botao direito"></button>
+                </div>
+                <div>
+                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img class="imagens_eptran" src="../imagens/transitoEPTRAN.png">
+                    <button class="" img src="../imagens/botao direito"></button>
                 </div>
             </div>
         </div>
