--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -7,59 +7,65 @@
     <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-    <div class="barra_navegacao">
-        <div class="elementos_esquerda">
-            <img class="imagem_tres_barras" src="../imagens/menu.png">
-            <a class="inicio_botao" href="inicio.html"> Início </a href="inicio.html">
-            <img class="imagem_maior_que" src="../imagens/maior_que.png">
-            <p>Séries Iniciais</p>
-        </div>
-        <div class="icones_direita">
-            <img class="usuario_branco" src="../imagens/usuario.png">
-            <img class="engrenagem" src="../imagens/engrenagem.png">
-        </div>
-    </div>
-    <div class="centralizar_div">
-        <div class="jogo_cinza">
-            <div>
-                <p id="titulo_SF">JOGOS SOBRE TRÂNSITO</p>
-                <p class="subtitulo_jogos">Mostre o que fazer no trânsito</p>
+    <section>
+        <div class="barra_navegacao">
+            <div class="elementos_esquerda">
+                <img class="imagem_tres_barras" src="../imagens/menu.png">
+                <a class="inicio_botao" href="inicio.html"> Início </a href="inicio.html">
+                <img class="imagem_maior_que" src="../imagens/maior_que.png">
+                <p>Séries Iniciais</p>
             </div>
-            <div class="jogo_azul">
-                <div class="deixar_lado">
-                    <div>
-                        <img class="imagem_jogo" src="../imagens/memoria.png">
+            <div class="icones_direita">
+                <img class="usuario_branco" src="../imagens/usuario.png">
+                <img class="engrenagem" src="../imagens/engrenagem.png">
+            </div>
+        </div>
+        <div class="centralizar_div">
+            <div class="jogo_cinza">
+                <div>
+                    <p id="titulo_SF">JOGOS SOBRE TRÂNSITO</p>
+                    <p class="subtitulo_jogos">Mostre o que fazer no trânsito</p>
+                </div>
+                <div class="jogo_azul">
+                    <div class="deixar_lado">
+                        <div>
+                            <img class="imagem_jogo" src="../imagens/memoria.png">
+                        </div>
+                        <div>
+                            <p>JOGO DA MEMÓRIA</p>
+                            <button class="botao_entrar">JOGAR</button>
+                        </div>
                     </div>
-                    <div>
-                        <p>JOGO DA MEMÓRIA</p>
-                        <button class="botao_entrar">JOGAR</button>
+                </div>
+                <div class="jogo_azul">
+                    <div class="deixar_lado">
+                        <div>
+                            <p>QUIZ DO TRÂNSITO </p>
+                            <button class="botao_entrar">JOGAR</button>
+                        </div>
+                        <div>
+                            <img class="imagem_quiz" src="../imagens/quiz.png">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="jogo_azul">
-                <div class="deixar_lado">
-                    <div>
-                        <p>QUIZ DO TRÂNSITO </p>
-                        <button class="botao_entrar">JOGAR</button>
-                    </div>
-                    <div>
-                        <img class="imagem_quiz" src="../imagens/quiz.png">
-                    </div>
+        </div>
+        <div class="centralizar_div">
+            <div class="jogo_cinza">
+                <p>INFORMAÇÕES</p>  
+                <div>
+                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img class="imagens_eptran" src="../imagens/quiz.png">
+                    <button class="" img src="../imagens/botao direito"></button>
+                </div>
+                <div>
+                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img class="imagens_eptran" src="../imagens/quiz.png">
+                    <button class="" img src="../imagens/botao direito"></button>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="centralizar_div">
-        <div class="jogo_cinza">
-            <p>INFORMAÇÕES</p>  
-            <div>
-                <img class="imagens_eptran" src="../imagens/quiz.png">
-            </div>
-            <div>
-                <img class="imagens_eptran" src="../imagens/quiz.png">
-            </div>
-        </div>
-    </div>
+    </section>
     <footer class="rodape">
         <div>
             <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
