alterado nome de imagens e adicionada imagens nas paginas de jogos

--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -54,14 +54,14 @@
             <div class="jogo_cinza">
                 <p>INFORMAÇÕES</p>  
                 <div>
-                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img src="../imagens/botao_esquerdo.png" class="botoes">
                     <img class="imagens_eptran" src="../imagens/carroEPTRAN.png">
-                    <button class="" img src="../imagens/botao direito"></button>
+                    <img src="../imagens/botao_direito.png" class="botoes">
                 </div>
                 <div>
-                    <button class="" img src="../imagens/botao esquerdo"></button>
+                    <img src="../imagens/botao_esquerdo.png" class="botoes">
                     <img class="imagens_eptran" src="../imagens/transitoEPTRAN.png">
-                    <button class="" img src="../imagens/botao direito"></button>
+                    <img src="../imagens/botao_direito.png" class="botoes">
                 </div>
             </div>
         </div>
