Finalizada a animação do menu. 3 Javascript para suas funções. Adicionei a logo da prefeitura e do EPTRAN no menu.

--- a/front-end/estrutura/capa.html
+++ b/front-end/estrutura/capa.html
@@ -35,4 +35,5 @@
         <button class="botao_cadastrar_capa" onclick="site_cadastro()">CADASTRAR</button>    
     </div>
 </body>
+<script src="../scripts/mudarPagina.js"></script>
 </html>
