--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -56,14 +56,18 @@
                 </div>
             </footer>
         </section>
-        <div id="aba_menu">
+        <div id="aba_menu" class="menu">
             <div class="menu_suspenso">
                 <p class="texto_menu_select"> EPTRAN </p>
                 <p class="texto_menu"> SÉRIES INICIAIS</p>
                 <p class="texto_menu"> SÉRIES FINAIS</p>
                 <p class="texto_menu"> ENSINO MÉDIO</p>
             </div>
-            <hr id="barra_menu">
+            <div class="flexivel">
+                <img class="logo_prefeitura_menu" src="../imagens/Prefeitura.png">
+                <img class="logo_projeto_menu" src="../imagens/logo_eptran.png">
+            </div>
+            <hr class="barra_menu">
             <div>
                 <div class="flexivel">
                     <img class="engrenagem_menu" src="../imagens/engrenagem.png">
@@ -76,5 +80,5 @@
             </div>
         </div>
     </body>
-    <script src="../scripts/script.js"></script> 
+    <script src="../scripts/animacaoMenu.js"></script>
 </html>
