Adicionei a foca na capa

--- a/front-end/estrutura/capa.html
+++ b/front-end/estrutura/capa.html
@@ -28,7 +28,9 @@
         </div>
     </div>
     <div id="centralizar_div_capa">
-        <div id="circulo_capa_da_foca"></div>
+        <div id="circulo_capa_da_foca">
+            <img id="foca" src="../imagens/foca.png">
+        </div>
     </div>
     <div id="centralizar_botao_capa">
         <button class="botao_entrar_capa" onclick="site_login()">ENTRAR</button>
