--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -23,7 +23,7 @@
                 <p class="fonte_entrar">Login</p>
             </div>
             <div class="espacamento_login">
-                <input id="campo_usuario" placeholder="Usuário">
+                <input id="campo_usuario" placeholder="Email">
             </div>
             <div class="espacamento_login">
                 <input type="text" placeholder="Senha" id="campo_senha">
